--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ services:
   - docker
 
 env:
-  - TAGS="bcm2708 bcm2710 mt7628 mt7688"
+  - TAGS="bcm2708 bcm2710 mt7628 mt7688 x86-64"
 
 install:
   - echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" | sudo tee /etc/apt/sources.list.d/docker.list
   - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
   - sudo apt-get update
-  - sudo apt-get -qqy -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" install docker-engine=1.12.0-0~trusty
+  - sudo apt-get -qqy -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" install docker-engine=1.12.1-0~trusty
   - docker version
 
 before_script:
