--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,12 @@
+openwrt:
+  image: easypi/openwrt
+  container_name: openwrt
+  hostname: OpenWrt
+  ports:
+    - "8022:22"
+    - "8080:80"
+  restart: unless-stopped
+
 base:
   image: easypi/openwrt:base
   command: sleep infinity
