change openwrt to lede

--- a/Dockerfile.bcm2708
+++ b/Dockerfile.bcm2708
@@ -5,10 +5,10 @@
 FROM easypi/openwrt:base
 MAINTAINER EasyPi Software Foundation
 
-ENV OPENWRT_VERSION=15.05.1
-ENV OPENWRT_URL=https://downloads.openwrt.org/chaos_calmer/15.05.1/brcm2708/bcm2708
-ENV OPENWRT_IMG=OpenWrt-ImageBuilder-15.05.1-brcm2708-bcm2708.Linux-x86_64
-ENV OPENWRT_SDK=OpenWrt-SDK-15.05.1-brcm2708-bcm2708_gcc-4.8-linaro_uClibc-0.9.33.2_eabi.Linux-x86_64
+ENV OPENWRT_VERSION=trunk
+ENV OPENWRT_URL=https://downloads.lede-project.org/snapshots/targets/brcm2708/bcm2708
+ENV OPENWRT_IMG=lede-imagebuilder-brcm2708-bcm2708.Linux-x86_64
+ENV OPENWRT_SDK=lede-sdk-brcm2708-bcm2708_gcc-5.4.0_musl-1.1.15_eabi.Linux-x86_64
 ENV OPENWRT_IMG_URL=${OPENWRT_URL}/${OPENWRT_IMG}.tar.bz2
 ENV OPENWRT_SDK_URL=${OPENWRT_URL}/${OPENWRT_SDK}.tar.bz2
 
