--- a/Dockerfile.bcm2709
+++ b/Dockerfile.bcm2709
@@ -9,12 +9,12 @@ ENV OPENWRT_VERSION=trunk
 ENV OPENWRT_URL=https://downloads.lede-project.org/snapshots/targets/brcm2708/bcm2709
 ENV OPENWRT_IMG=lede-imagebuilder-brcm2708-bcm2709.Linux-x86_64
 ENV OPENWRT_SDK=lede-sdk-brcm2708-bcm2709_gcc-5.4.0_musl-1.1.16_eabi.Linux-x86_64
-ENV OPENWRT_IMG_URL=${OPENWRT_URL}/${OPENWRT_IMG}.tar.bz2
-ENV OPENWRT_SDK_URL=${OPENWRT_URL}/${OPENWRT_SDK}.tar.bz2
+ENV OPENWRT_IMG_URL=${OPENWRT_URL}/${OPENWRT_IMG}.tar.xz
+ENV OPENWRT_SDK_URL=${OPENWRT_URL}/${OPENWRT_SDK}.tar.xz
 
 RUN set -xe \
-    && curl -sSL ${OPENWRT_IMG_URL} | tar xj \
-    && curl -sSL ${OPENWRT_SDK_URL} | tar xj \
+    && curl -sSL ${OPENWRT_IMG_URL} | tar xJ \
+    && curl -sSL ${OPENWRT_SDK_URL} | tar xJ \
     && ln -s ${OPENWRT_IMG} img \
     && ln -s ${OPENWRT_SDK} sdk \
     && cd sdk \
