--- a/Dockerfile.mt7628
+++ b/Dockerfile.mt7628
@@ -5,16 +5,16 @@
 FROM easypi/openwrt:base
 MAINTAINER EasyPi Software Foundation
 
-ENV OPENWRT_VERSION=trunk
-ENV OPENWRT_URL=https://downloads.openwrt.org/snapshots/trunk/ramips/mt7628
-ENV OPENWRT_IMG=OpenWrt-ImageBuilder-ramips-mt7628.Linux-x86_64
-ENV OPENWRT_SDK=OpenWrt-SDK-ramips-mt7628_gcc-5.3.0_musl-1.1.16.Linux-x86_64
-ENV OPENWRT_IMG_URL=${OPENWRT_URL}/${OPENWRT_IMG}.tar.bz2
-ENV OPENWRT_SDK_URL=${OPENWRT_URL}/${OPENWRT_SDK}.tar.bz2
+ENV OPENWRT_VERSION=17.01.0
+ENV OPENWRT_URL=https://downloads.lede-project.org/releases/17.01.0/targets/ramips/mt7628
+ENV OPENWRT_IMG=lede-imagebuilder-17.01.0-ramips-mt7628.Linux-x86_64
+ENV OPENWRT_SDK=lede-sdk-17.01.0-ramips-mt7628_gcc-5.4.0_musl-1.1.16.Linux-x86_64
+ENV OPENWRT_IMG_URL=${OPENWRT_URL}/${OPENWRT_IMG}.tar.xz
+ENV OPENWRT_SDK_URL=${OPENWRT_URL}/${OPENWRT_SDK}.tar.xz
 
 RUN set -xe \
-    && curl -sSL ${OPENWRT_IMG_URL} | tar xj \
-    && curl -sSL ${OPENWRT_SDK_URL} | tar xj \
+    && curl -sSL ${OPENWRT_IMG_URL} | tar xJ \
+    && curl -sSL ${OPENWRT_SDK_URL} | tar xJ \
     && ln -s ${OPENWRT_IMG} img \
     && ln -s ${OPENWRT_SDK} sdk \
     && cd sdk \
