--- a/Dockerfile.mt7620
+++ b/Dockerfile.mt7620
@@ -5,10 +5,10 @@
 FROM easypi/openwrt:base
 MAINTAINER EasyPi Software Foundation
 
-ENV OPENWRT_VERSION=17.01.4
-ENV OPENWRT_URL=https://downloads.lede-project.org/releases/17.01.4/targets/ramips/mt7620
-ENV OPENWRT_IMG=lede-imagebuilder-17.01.4-ramips-mt7620.Linux-x86_64
-ENV OPENWRT_SDK=lede-sdk-17.01.4-ramips-mt7620_gcc-5.4.0_musl-1.1.16.Linux-x86_64
+ENV OPENWRT_VERSION=18.06.0
+ENV OPENWRT_URL=https://downloads.openwrt.org/releases/18.06.0/targets/ramips/mt7620
+ENV OPENWRT_IMG=openwrt-imagebuilder-18.06.0-ramips-mt7620.Linux-x86_64
+ENV OPENWRT_SDK=openwrt-sdk-18.06.0-ramips-mt7620_gcc-7.3.0_musl.Linux-x86_64
 ENV OPENWRT_IMG_URL=${OPENWRT_URL}/${OPENWRT_IMG}.tar.xz
 ENV OPENWRT_SDK_URL=${OPENWRT_URL}/${OPENWRT_SDK}.tar.xz
 
